# bpm-detector

./: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ja.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docker.yml
examples/: README.md  comprehensive_analysis_demo.py  improved_analysis_test.py  optimized_performance_demo.py  parallel_processing_demo.py  performance_comparison.py  quick_demo.py  selective_analysis_demo.py  usage_examples.py
src/bpm_detector/: __init__.py  auto_parallel.py  boundary_detector.py  chord_analysis.py  chord_analyzer.py  cli.py  context_analyzer.py  detector.py  dynamics_analyzer.py  effects_detector.py  feature_analyzer.py  harmony_analyzer.py  instrument_classifier.py  jpop_structure_optimizer.py  key_detector.py  key_profiles.py  key_validation.py  melody_analyzer.py  melody_harmony_analyzer.py  music_analyzer.py  music_theory.py  parallel_analyzer.py  progress_manager.py  rhythm_analyzer.py  section_analyzer.py  section_classifier.py  section_processor.py  similarity_engine.py  structure_analyzer.py  timbre_analyzer.py  timbre_features.py
tests/: __init__.py  test_auto_parallel.py  test_boundary_detector.py  test_chord_analysis.py  test_chord_analyzer.py  test_cli.py  test_detector.py  test_dynamics_analyzer.py  test_edge_cases.py  test_effects_detector.py  test_harmony_analyzer.py  test_instrument_classifier.py  test_jpop_structure_optimizer.py  test_key_detector.py  test_key_profiles.py  test_key_validation.py  test_melody_analyzer.py  test_melody_harmony_analyzer.py  test_music_analyzer.py  test_music_theory.py  test_parallel_analyzer.py  test_rhythm_analyzer.py  test_section_analyzer.py  test_section_classifier.py  test_section_processor.py  test_similarity_engine.py  test_structure_analyzer.py  test_timbre_analyzer.py  test_timbre_features.py  test_yoru_ni_kakeru_fixes.py  test_yoru_ni_kakeru_regression.py
