[project]
name = "bpm-detector"
version = "0.2.0"
description = "A Python tool for automatic detection of BPM (tempo) and musical key from audio files"
authors = [
    { name = "libraz", email = "libraz@libraz.net" }
]
dependencies = [
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "audioread>=3.0.1",
    "numpy>=2.2.6",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "scikit-learn>=1.3.0",
    "scipy>=1.15.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "resampy>=0.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
keywords = ["audio", "music", "bpm", "tempo", "key", "detection", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/libraz/bpm-detector"
Repository = "https://github.com/libraz/bpm-detector"
Issues = "https://github.com/libraz/bpm-detector/issues"

[project.scripts]
bpm-detector = "bpm_detector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bpm_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"
filterwarnings = [
    "ignore::UserWarning:librosa.*",
    "ignore::RuntimeWarning:sklearn.*",
    "ignore::RuntimeWarning:numpy.*",
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore:n_fft=.*:UserWarning",
    "ignore:Trying to estimate tuning.*:UserWarning",
    "ignore:divide by zero encountered.*:RuntimeWarning",
    "ignore:overflow encountered.*:RuntimeWarning",
    "ignore:invalid value encountered.*:RuntimeWarning",
]

[tool.black]
skip-string-normalization = true
skip-magic-trailing-comma = true

